--- a/lesson8/style.css
+++ b/lesson8/style.css
@@ -658,6 +658,7 @@ input::-webkit-input-placeholder {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 12px;
+  margin-bottom: 10px;
 }
 
 .cart__block {
@@ -674,6 +675,8 @@ input::-webkit-input-placeholder {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 12px;
+  margin-bottom: 10px;
+  font-weight: 700;
 }
 .cart__block_total {
   font-weight: bold;
