--- a/lesson8/style.sass
+++ b/lesson8/style.sass
@@ -470,6 +470,7 @@ input::-webkit-input-placeholder
     display: grid
     grid-template-columns: repeat(4, 1fr)
     gap: 12px
+    margin-bottom: 10px
 .cart__block
     position: absolute
     background-color:  #F5F3F3   
@@ -483,6 +484,8 @@ input::-webkit-input-placeholder
         display: grid
         grid-template-columns: repeat(4, 1fr)
         gap: 12px
+        margin-bottom: 10px
+        font-weight: 700
     &_total
         font-weight: bold
         text-align: right
